--- a/style.css
+++ b/style.css
@@ -11,6 +11,20 @@ html, body{
     height: 100%;
 }
 
+body{
+    overflow-x: hidden;
+}
+
+@keyframes scroll-left {
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(calc(-100% - 20px));
+    }
+}
+
+
 #crsr{
     height: 2.3vw;
     width: 2.3vw;
@@ -150,7 +164,7 @@ html, body{
     width: 73%;
     margin-left: 27%;
     height: fit-content;
-    overflow: hidden;
+    /* overflow: hidden; */
     display: flex;
     align-items: center;
     position: relative;
@@ -166,7 +180,18 @@ html, body{
     text-transform: uppercase;
     font-weight: 600;
     line-height: 7vw;
+    position: relative;
     /* letter-spacing: 0.2vw; */
+
+}
+#hero1::before{
+    content: "01";
+    position: absolute;
+    font-size: 3vw;
+    font-weight: 100;
+    font-family: 'silk serif', serif;
+    left: -12%;
+    top: -8%;
 }
 
 .hero h2{
@@ -232,4 +257,236 @@ html, body{
     height: 100%;
     width: 100%;
     object-fit: cover;
+}
+
+#page3{
+    min-height: 100vh;
+    width: 100%;
+    background-color: rgb(77, 76, 76);
+    position: relative;
+}
+
+#page4{
+    min-height: 100vh;
+    width: 100%;
+    position: relative;
+    background-color: #151515;
+    /* padding-top: 19vh; */
+    padding: 7vh 0;
+}
+
+#page4-content{
+    width: 65vw;
+    margin-left: 28%;
+    min-height: 65vh;
+    /* background-color: blanchedalmond; */
+}
+
+#page4-content h1{
+    font-size: 7vw;
+    text-transform: uppercase;
+    position: relative;
+    /* border-bottom: 2px solid #e6e3e390; */
+}
+
+#page4-content h1::before{
+    content: "03";
+    position: absolute;
+    font-size: 4vw;
+    font-weight: 100;
+    font-family: 'silk serif', serif;
+    left: -12%;
+    top: 8%;
+}
+
+#page4-content .underline{
+    height: 1px;
+    width: 100%;
+    background-color: #fff;
+    margin: 5vw 0;
+
+}
+
+#page4-content>p{
+    font-size: 2.05vw;
+    width: 50%;
+    font-weight: 400;
+    padding-bottom: 2vw;
+}
+
+#page4-flex{
+    display: flex;
+    /* align-items: center;
+    justify-content: center; */
+}
+
+#page4-flex img{
+    width: 50%;
+}
+
+#page4-flex p{
+    font-size: 1vw;
+    width: 27%;
+    margin-left: 2vw;
+    line-height: 1.5vw;
+}
+
+#page4-blue-div{
+    width: 32vw;
+    height: 37vw;
+    background-color: #3F7DF4;
+    padding: 3vw 2vw;
+    position: relative;
+    margin-top: -30vh;
+    margin-left: 22vw;
+}
+
+.blue-div-elem{
+    height: 6vw;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    border-bottom: 2px solid #ffffff92;
+    /* background-color: crimson; */
+    padding: 1.5vw 0;
+}
+
+.blue-div-elem h4{
+    font-size: 1.3vw;
+    font-weight: 500;
+    /* width: 50%; */
+}
+
+.blue-div-elem p{
+    width: 40%;
+    font-size: 0.9vw;
+}
+
+#page5{
+    width: 100%;
+    min-height: 100vh;
+    position: relative;
+    background-color: #151515;
+}
+
+.elem {
+    /* background-color: red; */
+    white-space: nowrap;
+    overflow-x: hidden;
+}
+
+.elem h1{
+    text-transform: uppercase;
+    font-size: 7vw;
+    -webkit-text-stroke: 1px #fff;
+    font-weight: 400;
+    color: transparent;
+    display: inline-block;
+    margin-right: 16px;
+    animation-name: scroll-left;
+    animation-duration: 12s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    line-height: 1.15;
+}
+
+.elems {
+    /* background-color: red; */
+    white-space: nowrap;
+    overflow-x: hidden;
+}
+
+.elems h1{
+    text-transform: uppercase;
+    font-size: 7vw;
+    -webkit-text-stroke: 1px #fff;
+    font-weight: 400;
+    color: transparent;
+    display: inline-block;
+    transform: translateX(calc(-100% - 20px));
+    animation-name: scroll-left;
+    animation-duration: 12s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: reverse;
+}
+
+.elem span{
+    font-family: 'silk serif';
+    -webkit-text-stroke: 1px #fff;
+    color: transparent;
+}
+
+.elems span{
+    font-family: 'silk serif';
+    -webkit-text-stroke: 1px #fff;
+    color: transparent;
+}
+
+#footer{
+    width: 100%;
+    height: 100vh;
+    background-color: #151515;
+    position: relative;
+    /* background-color: rgb(197, 197, 63); */
+    padding-left: 28vw;
+    padding-right: 5vw;
+}
+
+#footer h1{
+    font-size: 7vw;
+    width: 60vw;
+    text-transform: uppercase;
+    margin-bottom: 5vw;
+    position: relative;
+    /* background-color: red; */
+}
+
+#footer h1::before{
+    content: "04";
+    position: absolute;
+    font-size: 4vw;
+    font-weight: 100;
+    font-family: 'silk serif', serif;
+    left: -12%;
+    top: 8%;
+}
+
+.underline{
+    height: 1px;
+    width: 100%;
+    background-color: #fff;
+    margin: 2vw 0;
+}
+
+#footer-div{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding-right: 10vw;
+    padding-top: 4vw;
+    margin-bottom: 3vw;
+}
+
+.box{
+    width: 25%;
+    /* background-color: red; */
+    margin-bottom: 8.8vh;
+}
+
+#footer-div h6{
+    font-size: 1.1vw;
+    margin-bottom: 1.5vw;
+    font-weight: 500;
+}
+
+#footer-div h5{
+    font-size: 1.5vw;
+    font-weight: 400;
+    /* margin: 0.3vh 0; */
+}
+
+#footer>h5{
+    font-weight: 500;
+    font-size: 1vw;
 }
