--- a/style.css
+++ b/style.css
@@ -266,8 +266,146 @@ body{
 #page3{
     min-height: 100vh;
     width: 100%;
-    background-color: rgb(77, 76, 76);
+    background-color: #151515;
     position: relative;
+    padding: 17vh 2vw;
+    /* margin-bottom: 20vh; */
+}
+
+#page3 h1{
+    font-size: 7vw;
+    text-transform: uppercase;
+    position: relative;
+    margin-left: 28vw;
+    /* border-bottom: 2px solid #e6e3e390; */
+}
+
+#page3 h1::before{
+    content: "02";
+    position: absolute;
+    font-size: 4vw;
+    font-weight: 100;
+    font-family: 'silk serif', serif;
+    left: -12%;
+    top: 8%;
+}
+
+#page3 .underline{
+    height: 1px;
+    width: 100%;
+    background-color: #ffffffcd;
+    margin: 5vw 0vw;
+    margin-left: 28vw;
+}
+
+#image-div-container{
+    /* background-color: red; */
+    padding: 1vw;
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
+.image-div{
+    height: 39vw;
+    width: 29vw;
+    position: relative;
+    overflow: hidden;
+    margin: 2vw;
+    flex-shrink: 0;
+    /* background-color: blue; */
+}
+
+.image-div:nth-child(1){
+    height: 29vw;
+    width: 21vw;
+}
+
+.image-div img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.page3-circle1{
+    height: 23vw;
+    width: 23vw;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    margin-top: 23vh;
+    margin-left: 10vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.page3-circle1 svg{
+    height: 30%;
+}
+
+.circle-in{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all ease 0.3s;
+    scale: 0;
+    border-radius: 50%;
+}
+
+.circle-in p{
+    font-size: 0.9vw;
+    font-weight: 600;
+    color: black;
+    scale: 0;
+    opacity: 0;
+    width: 65%;
+    transition: all ease 0.3s;
+    transition-delay: 0.3s;
+}
+
+.page3-circle1:hover .circle-in{
+    scale:1;
+}
+
+.page3-circle1:hover .circle-in p{
+    scale: 1;
+    opacity: 1;
+}
+
+.page3-circle2{
+    height: 23vw;
+    width: 23vw;
+    border: 2px solid #fff;
+    position: relative;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5vh;
+}
+
+.page3-circle2 svg{
+    height: 30%;
+    rotate: -45deg;
+}
+
+.page3-circle2:hover .circle-in{
+    scale:1;
+}
+
+.page3-circle2:hover .circle-in p{
+    scale: 1;
+    opacity: 1;
 }
 
 #page4{
@@ -308,7 +446,6 @@ body{
     width: 100%;
     background-color: #fff;
     margin: 5vw 0;
-
 }
 
 #page4-content>p{
@@ -493,4 +630,9 @@ body{
 #footer>h5{
     font-weight: 500;
     font-size: 1vw;
+}
+
+._canvas_container{
+    z-index: 9999 !important;
+    pointer-events: none;
 }
